0.1623
  added experimental auto_filter method
  deprecated default_bind_filter and default_fetch_filter because these are global effect.
  weakend filter_check for usability
0.1622
  deprecated DBIx::Custom::SQLite and DBIx::Custom::MySQL
  added dbi_options attribute
  checked attributes passed to connect method
0.1621
  cleanup (removed undocumented features)
0.1620
  updated document
0.1619
  updated document
  added experimental expand method
0.1618
  added helper method
  added begin_work, commit, and rollback method
0.1617
  L<DBIx::Custom> is now stable. APIs keep backword compatible in the feature.
0.1616
  removed experimental register_method(), and methods attribute, because it is too magical
0.1615
  fixed DBIx::Custom::QueryBuilder build_query() bug
  required Perl 5.008001 to use @CARP_NOT 
0.1614
  removed DBIx::Custom::Query start_tag and end tag attributes
  enable escaping '{' and '}' in the source of SQL
  fixed Carp Carp trust relationship
0.1613
  added experimental register_method() method
  added experimental methods attribute
0.1612
  added tests
  updated document
  removed DBIx::Custom::SQLite last_insert_rawid() mehtod(not backword compatible)
  removed DBIx::Custom::MySQL last_insert_id() method(not backword compatible)
0.1611
  renamed update tag to update_param
  renamed insert tag to insert_param
  renamed sql_builder to query_builder
0.1610
  added filter_check attribute.
0.1609
  updated document.
0.1608
  update document
  renamed DBIx::Custom::QueryBuilder::TagProcessors functions(not backword compatible)
0.1607
  where argument of select() method can specify array(string, paramters)
  renamed build_query() to create_query()(not backword compatible)
0.1606
  fix testing bug
0.1605
  remove DBIx::Custom::QueryBuilder::tag_syntax()  (not backword compatible)
  renamed DBIx::Custom::TagProcessor to DBIx::Custom::TagProcessors (not backword compatible)
  changed arguments of tag processor(not backword compatible)